# business-gateways-rag-pipline

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes.py
app/llm/: __init__.py  ollama.py
app/models/: __init__.py
app/rag/: __init__.py  embeddings.py  loader.py  pipeline.py  retriever.py
