[tool.poetry]
name = "business-gateway-rag-pipeline"
version = "0.1.0"
description = "Simple RAG Q&A API using FastAPI and Ollama"
authors = ["TK"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sentence-transformers = "^3.0.0"
faiss-cpu = "^1.8.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"
pypdf = "^6.9.2"

[tool.poetry.group.dev.dependencies]
httpie = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:run"
